--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,11 +24,11 @@
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profile_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="@dimen/profile_image"
+            android:layout_height="@dimen/profile_image"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="190dp"
+            android:layout_marginTop="@dimen/profile_image_mt"
             android:src="@drawable/profile"
             app:civ_border_color="#FF000000"
             app:civ_border_width="2dp" />
@@ -39,11 +39,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/profile_image"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
-            android:text="Example Profile"
+            android:layout_marginTop="@dimen/profile_text_mt"
+            android:text="@string/example_profile"
             android:textColor="#000"
             android:textStyle="bold"
-            android:textSize="20sp" />
+            android:textSize="@dimen/profile_text_size" />
 
     </RelativeLayout>
 
@@ -64,15 +64,15 @@
             android:layout_weight="1">
 
             <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="@dimen/icon_size"
+                android:layout_height="@dimen/icon_size"
                 android:src="@drawable/users"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Friends"
+                android:text="@string/friends"
                 android:textColor="@color/colorPrimary"
-                android:textSize="15sp"
+                android:textSize="@dimen/icon_text_size"
                 android:layout_marginTop="5dp"
                 />
         </LinearLayout>
@@ -85,14 +85,14 @@
             android:layout_weight="1">
 
             <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="@dimen/icon_size"
+                android:layout_height="@dimen/icon_size"
                 android:src="@drawable/wavinghand"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hello"
-                android:textSize="15sp"
+                android:text="@string/hello"
+                android:textSize="@dimen/icon_text_size"
                 android:layout_marginTop="5dp"
                 />
         </LinearLayout>
@@ -105,14 +105,14 @@
             android:layout_weight="1">
 
             <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="@dimen/icon_size"
+                android:layout_height="@dimen/icon_size"
                 android:src="@drawable/ic_block_black_24dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Block"
-                android:textSize="15sp"
+                android:text="@string/block"
+                android:textSize="@dimen/icon_text_size"
                 android:layout_marginTop="5dp"
                 />
         </LinearLayout>
@@ -125,14 +125,14 @@
             android:layout_weight="1">
 
             <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="@dimen/icon_size"
+                android:layout_height="@dimen/icon_size"
                 android:src="@drawable/ic_more_horiz_black_24dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="More"
-                android:textSize="15sp"
+                android:text="@string/more"
+                android:textSize="@dimen/icon_text_size"
                 android:layout_marginTop="5dp"
                 />
         </LinearLayout>
@@ -142,6 +142,119 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#000"
+        android:background="@color/black_color"
         android:layout_margin="10dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/lorem_ipsum"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:textAlignment="center"
+        />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/black_color"
+        android:layout_margin="10dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/photo_background"
+            android:layout_marginLeft="10dp"
+            >
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_image_black_24dp"
+                android:layout_margin="5dp"
+                />
+        </LinearLayout>
+        
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Photos"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/black_color"
+            android:layout_marginLeft="10dp"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="10"
+            android:layout_marginBottom="2dp"
+            >
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                android:src="@drawable/photo1"
+                android:layout_weight="5"
+                android:scaleType="centerCrop"
+                />
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                android:src="@drawable/photo2"
+                android:layout_weight="5"
+                android:scaleType="centerCrop"
+                android:layout_marginLeft="2dp"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="10"
+            >
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                android:src="@drawable/photo3"
+                android:layout_weight="3"
+                android:scaleType="centerCrop"
+                />
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                android:src="@drawable/photo4"
+                android:layout_weight="3"
+                android:scaleType="centerCrop"
+                android:layout_marginLeft="2dp"
+                />
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                android:src="@drawable/photo5"
+                android:layout_weight="4"
+                android:scaleType="centerCrop"
+                android:layout_marginLeft="2dp"
+                />
+
+        </LinearLayout>
+        
+    </LinearLayout>
+
 </LinearLayout>
