--- a/app/src/main/res/layout/activity_friend.xml
+++ b/app/src/main/res/layout/activity_friend.xml
@@ -20,7 +20,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            app:srcCompat="@drawable/background" />
+            app:srcCompat="@drawable/photo4" />
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profile_image"
@@ -29,7 +29,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/profile_image_mt"
-            android:src="@drawable/profile"
+            android:src="@drawable/friend6"
             app:civ_border_color="#FF000000"
             app:civ_border_width="2dp" />
 
@@ -298,7 +298,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="9">
-            
+
             <android.support.v7.widget.CardView
                 android:layout_width="0dp"
                 android:layout_height="150dp"
@@ -452,9 +452,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:gravity="center"
-                    android:id="@+id/friend6">
-
+                    android:gravity="center">
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
